@@ -711,6 +711,9 @@ struct hblkhdr {
 				/* changed.				*/
     size_t hb_sz;  /* If in use, size in bytes, of objects in the block. */
 		   /* if free, the size in bytes of the whole block      */
+		   /* We assume that this is convertible to signed_word	 */
+		   /* without generating a negative result.  We avoid	 */
+		   /* generating free blocks larger than that.		 */
     word hb_descr;   		/* object descriptor for marking.  See	*/
     				/* mark.h.				*/
 #   ifdef MARK_BIT_PER_OBJ
